# RoostAI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  get_llm_responses.py  get_rag_response.out  llm_responses.py  llms.py  pyproject.toml  requirements.txt  scrapedindex.html  setup.py
data/: faq_pairs.csv  faq_responses.csv
eval/: get_llm_responses.py  llms.py
eval/faq_evaluation/: get_llm_responses.py  get_rag_response.out  get_rag_response.py  llms.py
eval/faq_evaluation/data/: faq_responses_local_rag.csv  faq_responses_milestone2.csv
eval/first_faq_evaluation/data/: faq_responses.csv
eval/ragas_evaluation/: eval.py  eval_faithfulness.py  get_rag_response.py  nohup.out  parse_rag_scores.py  rag_res.csv  rag_res.json  test.json
eval/second_faq_evaluation/: get_rag_response.out  get_rag_response.py
eval/second_faq_evaluation/data/: faq_pairs.csv  faq_responses_local_rag.csv
eval/second_faq_evaluation/data/results/20241130_221020/: detailed_results.json  results.csv  summary.json
faq_evaluation/: get_llm_responses.py
meeting_notes/: 09_19_meeting_notes_experimental_setup.md
misc/proposal/: proposal.md
misc/rag_experimentation/: exp_design.md
roostai/back_end/: README.md  dry-run.out  main.out  main.py
roostai/back_end/chatbot/: config.py  config.yaml  llm_manager.py  quality_checker.py  query_processor.py  reranker.py  types.py  vector_store.py
roostai/back_end/dry-runs/: admissions.out  carolina_core.out  degree_works_correction.out
roostai/back_end/roostai/front_end/data/: chroma.sqlite3
roostai/chunk_experiment/: count_chunks.py
roostai/contextualization/: contextualize.py  llm_test.py
roostai/contextualization/chunks_and_metadata/: chunks_0.json
roostai/contextualization/processed_chunks/: chunks_0_processed.json
roostai/data/: chroma.sqlite3
roostai/faq_scraping/: scraper.py  selenium_scraper.py
roostai/front_end/: README.md  base.py  cli.py  config.py  survey_app.py
roostai/front_end/components/: chat.py  modal.py  questions.py  utils.py
roostai/front_end/data/: chroma.sqlite3  example_docs.yaml
roostai/misc/: sanity_checker_metadata.py
roostai/scripts/: README.md  data_ingestion.py  diagnose.py  test.py  verify.py
roostai/scripts/chunk_experiment/: results.txt
roostai/web_scraping/: README.md  chunker.py  collect_html.py  crawl4ai_test.py  extract.py  preprocess_json.py  scraper_crawl4ai.py  web_scraper.py
src/back-end/: main.py
src/back-end/chatbot/: config.yaml  llm_manager.py  quality_checker.py  query_processor.py  reranker.py  types.py  vector_store.py
src/faq_scraping/: scraper.py
src/web_scraping/: README.md  chunker.py  collect_html.py  extract.py  web_scraper.py
src/web_scraping/faq_scraping/: selenium_scraper.py
web_scraping/: README.md  chunker.py  collect_html.py  extract.py  selenium_scraper.py  web_scraper.py
writeups/experimental_designs/: initial_experimental_design.md
(+19 files in other folders)
