[tool.poetry]
name = "RoostAI"
version = "0.1.0"
description = "University-Centered Chatbot"
authors = ["Vansh Nagpal <2002vansh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.25.0"
bs4 = "^0.0.2"
llama-index-embeddings-openai = "^0.2.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
google = "^3.0.0"
google-generativeai = "^0.8.3"
huggingface-hub = "^0.26.0"
anthropic = "^0.36.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
