[tool.poetry]
name = "RoostAI"
version = "0.1.0"
description = "University-Centered Chatbot"
authors = [
    "Vansh Nagpal <2002vansh@gmail.com>",
    "Nitin Gupta <niting1209@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]  # main dependency group
python = "^3.10"
selenium = "^4.25.0"
bs4 = "^0.0.2"
llama-index-embeddings-openai = "^0.2.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
google = "^3.0.0"
google-generativeai = "^0.8.3"
huggingface-hub = "^0.26.0"
anthropic = "^0.36.2"
llama-index-embeddings-huggingface = "^0.3.1"

# The backend dependency group
# `poetry add <name-of-package> --group backend` to add a package to this group
[tool.poetry.group.backend.dependencies]
torch = "^2.5.1"
langchain = "^0.3.7"
sentence-transformers = "^3.2.1"
transformers = "^4.46.1"
chromadb = "^0.5.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
