[tool.poetry]
name = "roostai"
version = "0.1.0"
description = "University-Centered Chatbot"
authors = [
    "Vansh Nagpal <2002vansh@gmail.com>",
    "Nitin Gupta <niting1209@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]  # main dependency group
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
selenium = "^4.25.0"
bs4 = "^0.0.2"
llama-index-embeddings-openai = "^0.2.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
google = "^3.0.0"
google-generativeai = "^0.8.3"
huggingface-hub = "^0.26.0"
anthropic = "^0.36.2"
llama-index-embeddings-huggingface = "^0.3.1"
requests = "^2.32.3"
pycryptodome = "^3.21.0"
accelerate = "^1.1.1"
playwright = "^1.49.0"
black = "^24.10.0"
pypdf2 = "^3.0.1"
pre-commit = "^4.0.1"
streamlit = "^1.40.2"
markdown = "^3.7"
streamlit-modal = "^0.1.2"
ragas = "^0.2.8"
langsmith = "^0.2.3"

[tool.poetry.group.backend.dependencies]
# The backend dependency group
# `poetry add <name-of-package> --group backend` to add a package to this group

torch = "^2.5.1"
langchain = "^0.3.7"
sentence-transformers = "^3.2.1"
transformers = "^4.46.1"
chromadb = "^0.5.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roostai = "roostai.front_end.cli:cli"

# Might need the following command if running into `protobuf` errors
# `poetry run pip install "protobuf==3.20.*"`